# stablecore-storage

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CopySDK.bat  CopySDK_RD.bat  GenerateStorageVs2022.bat  GenerateVs2022.bat  README.md  SCStorage.natvis  TASK_TEMPLATE.md  ThirdParty.7z  normalize_eol.py
Docs/: 0423文档审查结论.md  CapabilityGapAssessment.md  CompositeLogicalIndexImplementationPlan.md  ComputedTableViewAndStartup.md  CreateBackupCopy Level 2 完整开发方案.md  DatabaseEditorColumnConversionTask.md  DatabaseEditorComputedColumnLifecycle.md  DatabaseEditorGuiDesign.md  DatabaseEditorGuiImplementationScope.md  DatabaseEditorTableDeletionSemantics.md  DeferredNonNullColumnBackfill.md  NeedUpdateDocs.md  PerformanceSmokeBaseline.md  Roadmap.md  SCDatabaseEditor 主界面设计方案.md  SCStorageSchemaEdit接口草案.md  SchemaEditUsage.md  StorageBackupAndBaseline.md  T1-T25Status.md  T1-T33Status.md  T26-T33Implementation.md  TaskBreakdown.md  V1BaselineDecisions.md  task.md  代码审查.md  代码审查3.md  代码审查问题2.md  使用说明.md  当前实现状态.md  文档索引.md  测试重构方案.md  界面重构.md
Docs/AI/: ArchitectureAndSemantics.md  ExecutionBoundaryAndScope.md  ModuleMapAndReference.md  TestingWorkflowAndOutput.md
Docs/Quantity/DevGuide/: P0设计修复强约束清单.md  P1代码改造设计与PatchPlan.md  P1接口与核心模型定义稿.md  Phase1-P0设计修复方案.md  Phase2-P1平台能力修复方案.md  QueryReference接口定义稿.md  Query执行架构设计稿.md  Step1-3优先级结论.md  Task1结果确认单.md  Task3结果确认单.md  Task4结果确认单.md  Task4结果确认单v2.md  Task6-1结果确认单.md  Task6-2结果确认单.md  Task6-3A执行分层设计稿.md  Task6-3B结果确认单.md  Task6-3C结果确认单.md  Task6-4-6-5结果确认单.md  Task6代码改造设计与PatchPlan.md  产品设计文档存储使用审查.md  全量文档架构审查.md  全量文档架构审查修改记录.md  存储平台阶段性基线文档与使用约束.md  存储模块实现偏差分析.md  存储模块设计评审.md  工程工作副本与历史基线接口开发文档.md  工程工作副本与历史基线接口草案.md  表结构元数据显式化设计方案.md
Examples/: MemoryExample.cpp  ProductIntegrationExample.cpp  SchemaEditExample.cpp
Include/: ISCComputed.h  ISCDebugPackage.h  ISCDiagnostics.h  ISCInterfaces.h  ISCQuery.h  ISCRefPtr.h  ISCTableView.h  SCBatch.h  SCErrors.h  SCFactory.h  SCMigration.h  SCQuery.h  SCRefCounted.h  SCSchemaEdit.h  SCStorage.h  SCTypes.h
Include/StableCore/Storage/: Batch.h  Computed.h  Diagnostics.h  Factory.h  ISCComputed.h  ISCDiagnostics.h  ISCInterfaces.h  ISCRefPtr.h  ISCTableView.h  Interfaces.h  Migration.h  RefCounted.h  RefPtr.h  SCBatch.h  SCErrors.h  SCFactory.h  SCMigration.h  SCRefCounted.h  SCStorage.h  SCTypes.h  Storage.h  TableView.h  Types.h
Src/: Factory.cpp  SCErrors.cpp  SCFactory.cpp
Src/Batch/: BatchOperations.cpp  SCBatchOperations.cpp
Src/Computed/: ComputedRuntime.cpp  SCComputedRuntime.cpp  SCTableView.cpp  TableView.cpp
Src/Diagnostics/: Diagnostics.cpp  SCDebugPackage.cpp  SCDiagnostics.cpp
Src/Memory/: MemoryDatabase.cpp  SCMemoryDatabase.cpp
Src/Migration/: Migration.cpp  SCMigration.cpp
Src/Query/: SCQueryBridge.cpp  SCQueryExecutor.cpp  SCQueryMemoryExecutor.cpp  SCQueryMemoryExecutor.h  SCQueryPlanner.cpp  SCQuerySqliteExecutor.cpp  SCQuerySqliteExecutor.h  SCQuerySqliteIndexAccess.h
Src/Schema/: SCSchemaEdit.cpp
Src/Sqlite/: SCSqliteAdapter.cpp  SqliteAdapter.cpp  SqliteImplCore.cpp  SqliteImplCore.h  SqliteImplDatabase.h  SqliteImplDatabase_Constraints.cpp  SqliteImplDatabase_Edit.cpp  SqliteImplDatabase_Index.cpp  SqliteImplDatabase_Init.cpp  SqliteImplSchema.cpp  SqliteUpgradeInterfaces.h  SqliteUpgradeRegistry.cpp  SqliteUpgradeRegistry.h  SqliteUpgradeV5ToV6.cpp  SqliteUpgradeV6ToV7.cpp  SqliteUpgradeV7ToV8.cpp
Tests/: ComputedTests.cpp  DatabaseEditorSchemaTableTests.cpp  DatabaseEditorSessionTests.cpp  M1Tests.cpp  M2SqliteTests.cpp  M3Tests.cpp  PerformanceSmokeTests.cpp  QueryMemoryExecutorTests.cpp  QueryPlannerBridgeTests.cpp  QuerySqliteExecutorTests.cpp  SchemaEditTests.cpp  TableViewTests.cpp
Tests/Query/: QueryExecutorCompositeIndexTests.cpp  QueryExecutorCompositeNullDefaultTests.cpp  QueryExecutorCompositeOrderingTests.cpp  QueryExecutorCompositeRangeTests.cpp  QueryExecutorReopenUndoRedoTests.cpp  QueryExecutorRequireIndexTests.cpp  QueryExecutorTieBreakTests.cpp
Tests/SchemaEdit/: SchemaCompositeIndexTests.cpp  SchemaConstraintTests.cpp  SchemaCreateTableTests.cpp  SchemaIndexTests.cpp  SchemaPatchTests.cpp  SchemaQueryIndexRepairTests.cpp  SchemaRollbackTests.cpp
Tests/SqliteBackend/: SqliteBackupTests.cpp  SqliteBasicOperationsTests.cpp  SqliteBatchTests.cpp  SqliteEditLogTests.cpp  SqliteImportTests.cpp  SqliteReadOnlyOpenTests.cpp  SqliteRelationTests.cpp  SqliteSchemaTests.cpp  SqliteUndoRedoTests.cpp  SqliteUpgradeTests.cpp
Tests/StorageCore/: StorageCoreRelationTests.cpp  StorageCoreSchemaTests.cpp  StorageCoreTransactionTests.cpp  StorageCoreValueTests.cpp
Tests/Support/: TestFixtures.h  TestPaths.cpp  TestPaths.h  TestQueryHelpers.cpp  TestQueryHelpers.h  TestSchemaBuilders.cpp  TestSchemaBuilders.h  TestSeedData.cpp  TestSeedData.h  TestSqliteHelpers.cpp  TestSqliteHelpers.h
Tools/DatabaseEditor/: .clang-format  AddColumnDialog.cpp  AddColumnDialog.h  CMakeLists.txt  ComputedColumnDialog.cpp  ComputedColumnDialog.h  DatabaseEditorMainWindow.cpp  DatabaseEditorMainWindow.h  DatabaseSession.cpp  DatabaseSession.h  README.md  RecordFilterProxyModel.cpp  RecordFilterProxyModel.h  RecordTableModel.cpp  RecordTableModel.h  RelationPickerDialog.cpp  RelationPickerDialog.h  SCAddColumnDialog.cpp  SCAddColumnDialog.h  SCBinaryUtils.h  SCComputedColumnDialog.cpp  SCComputedColumnDialog.h  SCConstraintEditorDialog.cpp  SCConstraintEditorDialog.h  SCDatabaseEditorMainWindow.cpp  SCDatabaseEditorMainWindow.h  SCDatabaseSession.cpp  SCDatabaseSession.h  SCIndexEditorDialog.cpp  SCIndexEditorDialog.h  SCRecordFilterProxyModel.cpp  SCRecordFilterProxyModel.h  SCRecordTableModel.cpp  SCRecordTableModel.h  SCRelationPickerDialog.cpp  SCRelationPickerDialog.h  SCSchemaTableDialog.cpp  SCSchemaTableDialog.h  SCSchemaTableGenerator.cpp  SCSchemaTableGenerator.h  (+9 more)
cmake/: SCStorageConfig.cmake.in  SCTestHelpers.cmake  SCUtf8.cmake  StablecoreStorageConfig.cmake.in
